--- a/resources/sass/subscriber.scss
+++ b/resources/sass/subscriber.scss
@@ -19,6 +19,15 @@
 
         input {
             margin: 0;
+
+            &.error {
+                border-color: $red
+            }
+        }
+
+        .error-message {
+            font-size: 14px;
+            color: $red;
         }
 
         .btn {
